--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lorem ipsum dolor sit amet</title>
     <link href="style2.css" rel="stylesheet">
     <link href="style1.css" rel="stylesheet">
+    <link href="style3.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
 </head>
 <body>
