--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="style2.css" rel="stylesheet">
     <link href="style1.css" rel="stylesheet">
     <link href="style3.css" rel="stylesheet">
+    <link href="style4.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -23,7 +24,7 @@
         <p>nec finibus ipsum iaculis vitae. Praesent nisi justo.</p>
         <ul>
             <li><a href="#appetizers">Text 1</a></li>
-            <li><a href="#entrees">Text 2</a></li>
+            <li><a href="#newitem">Text 2</a></li>
             <li><a href="#toast">Text 3</a></li>
             <li><a href="#dessert">Text 4</a></li>
         </ul>
